[gd_scene load_steps=17 format=4 uid="uid://c87dxugnyltuo"]

[ext_resource type="Texture2D" uid="uid://c56aswnl5x3ug" path="res://assets/images/tileset.png" id="1_414cb"]
[ext_resource type="Script" uid="uid://bfp31wq3wbm3q" path="res://scripts/main.gd" id="1_j70lj"]
[ext_resource type="PackedScene" uid="uid://c8qrnqsmvbvbw" path="res://scenes/gameplay.tscn" id="1_klgnm"]
[ext_resource type="PackedScene" uid="uid://dhobi0m2sukes" path="res://scenes/player.tscn" id="2_0ukcc"]
[ext_resource type="PackedScene" uid="uid://cury3cpqulgmv" path="res://scenes/game_over.tscn" id="2_ry1g7"]
[ext_resource type="PackedScene" uid="uid://dg43jrc41qvh8" path="res://scenes/enemy.tscn" id="3_nt2wp"]
[ext_resource type="Script" uid="uid://4kxo35u28hm8" path="res://scripts/spawn_enemy.gd" id="4_qh04p"]
[ext_resource type="Script" uid="uid://cat4jdixbekda" path="res://scripts/spawn_coin.gd" id="5_k8f8b"]
[ext_resource type="PackedScene" uid="uid://bmjaapsfuni8x" path="res://scenes/coin.tscn" id="6_7vc00"]
[ext_resource type="Script" uid="uid://g8mt7qbr0nvn" path="res://scripts/menu.gd" id="10_tdkxd"]
[ext_resource type="FontFile" uid="uid://cytygovujt8fn" path="res://assets/fonts/font.ttf" id="11_fh3di"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ukcc"]
texture = ExtResource("1_414cb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_nt2wp"]
sources/0 = SubResource("TileSetAtlasSource_0ukcc")

[sub_resource type="LabelSettings" id="LabelSettings_epufq"]
font = ExtResource("11_fh3di")
font_size = 81
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya4ey"]
size = Vector2(99, 833)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb6dy"]
size = Vector2(667.5, 46)

[node name="main" type="Node2D" node_paths=PackedStringArray("player")]
script = ExtResource("1_j70lj")
player = NodePath("player")
game_over_menu = ExtResource("2_ry1g7")

[node name="gameplay" parent="." node_paths=PackedStringArray("player") instance=ExtResource("1_klgnm")]
z_index = 999
player = NodePath("../player")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAAAAAGAAEAAAAAAAEAAAAGAAEAAAAAAAIAAAAGAAEAAAAAAAMAAAAGAAEAAAAAAAQAAAAGAAEAAAAAAAUAAAAGAAEAAAAAAAYAAAAGAAEAAAAAAAcAAAAGAAEAAAAAAAgAAAAGAAEAAAABAAAAAAAGAAEAAAABAAEAAAAGAAEAAAABAAIAAAAGAAEAAAABAAMAAAAGAAEAAAABAAQAAAAGAAEAAAABAAUAAAAHAAAAAAABAAYAAAAGAAEAAAABAAcAAAAGAAEAAAABAAgAAAAGAAEAAAACAAAAAAAGAAEAAAACAAEAAAAGAAEAAAACAAIAAAAGAAEAAAACAAMAAAAHAAAAAAACAAQAAAAGAAAAAAACAAUAAAAGAAAAAAACAAYAAAAGAAEAAAACAAcAAAAGAAEAAAACAAgAAAAGAAEAAAADAAAAAAAGAAEAAAADAAEAAAAGAAEAAAADAAIAAAAGAAEAAAADAAMAAAAHAAAAAAADAAQAAAAGAAAAAAADAAUAAAAGAAAAAAADAAYAAAAGAAEAAAADAAcAAAAGAAEAAAADAAgAAAAGAAEAAAAEAAAAAAAGAAEAAAAEAAEAAAAGAAEAAAAEAAIAAAAGAAEAAAAEAAMAAAAHAAAAAAAEAAQAAAAHAAAAAAAEAAUAAAAHAAAAAAAEAAYAAAAGAAEAAAAEAAcAAAAGAAEAAAAEAAgAAAAGAAEAAAAFAAAAAAAGAAEAAAAFAAEAAAAGAAEAAAAFAAIAAAAGAAEAAAAFAAMAAAAHAAAAAAAFAAQAAAAGAAEAAAAFAAUAAAAGAAEAAAAFAAYAAAAGAAEAAAAFAAcAAAAGAAEAAAAFAAgAAAAGAAEAAAAGAAAAAAAGAAEAAAAGAAEAAAAGAAEAAAAGAAIAAAAGAAEAAAAGAAMAAAAGAAEAAAAGAAQAAAAGAAEAAAAGAAUAAAAGAAEAAAAGAAYAAAAGAAEAAAAGAAcAAAAGAAEAAAAGAAgAAAAGAAEAAAAHAAAAAAAGAAEAAAAHAAEAAAAGAAEAAAAHAAIAAAAGAAEAAAAHAAMAAAAGAAEAAAAHAAQAAAAGAAEAAAAHAAUAAAAGAAEAAAAHAAYAAAAGAAEAAAAHAAcAAAAGAAEAAAAHAAgAAAAGAAEAAAAIAAAAAAAGAAEAAAAIAAEAAAAGAAEAAAAIAAIAAAAGAAEAAAAIAAMAAAAGAAEAAAAIAAQAAAAGAAEAAAAIAAUAAAAGAAEAAAAIAAYAAAAGAAEAAAAIAAcAAAAGAAEAAAAIAAgAAAAGAAEAAAAJAAAAAAAGAAEAAAAJAAEAAAAGAAEAAAAJAAIAAAAGAAEAAAAJAAMAAAAGAAEAAAAJAAQAAAAGAAEAAAAJAAUAAAAGAAEAAAAJAAYAAAAGAAEAAAAJAAcAAAAGAAEAAAAJAAgAAAAGAAEAAAAAAAkAAAAGAAEAAAABAAkAAAAGAAEAAAACAAkAAAAGAAEAAAADAAkAAAAGAAEAAAAEAAkAAAAGAAEAAAAFAAkAAAAGAAEAAAAGAAkAAAAGAAEAAAAHAAkAAAAGAAEAAAAIAAkAAAAGAAEAAAAJAAkAAAAGAAEAAAAAAAoAAAAGAAEAAAAAAAsAAAAGAAEAAAAAAAwAAAAGAAEAAAAAAA0AAAAGAAEAAAAAAA4AAAAGAAEAAAABAAoAAAAGAAEAAAABAAsAAAAGAAEAAAABAAwAAAAGAAEAAAABAA0AAAAHAAAAAAABAA4AAAAGAAEAAAACAAoAAAAGAAEAAAACAAsAAAAGAAEAAAACAAwAAAAGAAEAAAACAA0AAAAGAAEAAAACAA4AAAAGAAEAAAADAAoAAAAGAAEAAAADAAsAAAAGAAEAAAADAAwAAAAGAAEAAAADAA0AAAAGAAEAAAADAA4AAAAGAAEAAAAEAAoAAAAGAAEAAAAEAAsAAAAGAAEAAAAEAAwAAAAGAAEAAAAEAA0AAAAGAAEAAAAEAA4AAAAGAAEAAAAFAAoAAAAGAAEAAAAFAAsAAAAGAAEAAAAFAAwAAAAGAAEAAAAFAA0AAAAGAAEAAAAFAA4AAAAGAAEAAAAGAAoAAAAGAAAAAAAGAAsAAAAHAAAAAAAGAAwAAAAHAAAAAAAGAA0AAAAGAAAAAAAGAA4AAAAGAAEAAAAHAAoAAAAGAAAAAAAHAAsAAAAHAAAAAAAHAAwAAAAHAAAAAAAHAA0AAAAGAAAAAAAHAA4AAAAGAAEAAAAIAAoAAAAGAAAAAAAIAAsAAAAHAAAAAAAIAAwAAAAHAAAAAAAIAA0AAAAGAAAAAAAIAA4AAAAGAAEAAAAJAAoAAAAGAAEAAAAJAAsAAAAGAAEAAAAJAAwAAAAGAAEAAAAJAA0AAAAGAAEAAAAJAA4AAAAGAAEAAAAKAAAAAAAGAAEAAAAKAAEAAAAGAAEAAAAKAAIAAAAGAAEAAAAKAAMAAAAGAAEAAAAKAAQAAAAGAAEAAAAKAAUAAAAGAAEAAAAKAAYAAAAGAAEAAAAKAAcAAAAGAAEAAAAKAAgAAAAGAAEAAAAKAAkAAAAGAAEAAAAKAAoAAAAGAAEAAAAKAAsAAAAGAAEAAAAKAAwAAAAGAAEAAAAKAA0AAAAGAAEAAAAKAA4AAAAGAAEAAAALAAAAAAAGAAEAAAALAAEAAAAGAAEAAAALAAIAAAAGAAEAAAALAAMAAAAGAAEAAAALAAQAAAAGAAEAAAALAAUAAAAGAAEAAAALAAYAAAAGAAEAAAALAAcAAAAGAAEAAAALAAgAAAAGAAEAAAALAAkAAAAGAAEAAAALAAoAAAAGAAEAAAALAAsAAAAGAAEAAAALAAwAAAAGAAEAAAALAA0AAAAGAAEAAAALAA4AAAAGAAEAAAAMAAAAAAAGAAEAAAAMAAEAAAAGAAEAAAAMAAIAAAAGAAEAAAAMAAMAAAAGAAEAAAAMAAQAAAAGAAEAAAAMAAUAAAAGAAEAAAAMAAYAAAAGAAEAAAAMAAcAAAAGAAEAAAAMAAgAAAAGAAEAAAAMAAkAAAAGAAEAAAAMAAoAAAAGAAEAAAAMAAsAAAAGAAEAAAAMAAwAAAAGAAEAAAAMAA0AAAAGAAEAAAAMAA4AAAAGAAEAAAANAAAAAAAGAAEAAAANAAEAAAAGAAEAAAANAAIAAAAGAAEAAAANAAMAAAAGAAEAAAANAAQAAAAGAAEAAAANAAUAAAAGAAEAAAANAAYAAAAGAAEAAAANAAcAAAAGAAEAAAANAAgAAAAGAAEAAAANAAkAAAAGAAEAAAANAAoAAAAGAAEAAAANAAsAAAAGAAEAAAANAAwAAAAGAAEAAAANAA0AAAAGAAEAAAANAA4AAAAGAAEAAAAOAAAAAAAGAAEAAAAOAAEAAAAGAAEAAAAOAAIAAAAGAAEAAAAOAAMAAAAGAAEAAAAOAAQAAAAGAAEAAAAOAAUAAAAGAAEAAAAOAAYAAAAGAAEAAAAOAAcAAAAGAAEAAAAOAAgAAAAGAAEAAAAOAAkAAAAGAAEAAAAOAAoAAAAGAAEAAAAOAAsAAAAGAAEAAAAOAAwAAAAGAAEAAAAOAA0AAAAGAAEAAAAOAA4AAAAGAAEAAAAAAA8AAAAGAAEAAAAAABAAAAAGAAEAAAAAABEAAAAGAAEAAAAAABIAAAAGAAEAAAAAABMAAAAGAAEAAAAAABQAAAAGAAEAAAAAABUAAAAGAAEAAAABAA8AAAAGAAEAAAABABAAAAAGAAEAAAABABEAAAAGAAEAAAABABIAAAAGAAEAAAABABMAAAAGAAEAAAABABQAAAAGAAEAAAABABUAAAAGAAEAAAACAA8AAAAGAAEAAAACABAAAAAGAAEAAAACABEAAAAGAAEAAAACABIAAAAGAAEAAAACABMAAAAGAAEAAAACABQAAAAGAAEAAAACABUAAAAGAAEAAAADAA8AAAAGAAEAAAADABAAAAAGAAEAAAADABEAAAAGAAEAAAADABIAAAAGAAEAAAADABMAAAAGAAEAAAADABQAAAAGAAEAAAADABUAAAAGAAEAAAAEAA8AAAAGAAEAAAAEABAAAAAGAAEAAAAEABEAAAAGAAEAAAAEABIAAAAGAAEAAAAEABMAAAAGAAEAAAAEABQAAAAGAAEAAAAEABUAAAAGAAEAAAAFAA8AAAAGAAEAAAAFABAAAAAGAAEAAAAFABEAAAAGAAEAAAAFABIAAAAGAAEAAAAFABMAAAAGAAEAAAAFABQAAAAGAAEAAAAFABUAAAAGAAEAAAAGAA8AAAAGAAEAAAAGABAAAAAGAAEAAAAGABEAAAAGAAEAAAAGABIAAAAGAAEAAAAGABMAAAAGAAEAAAAGABQAAAAGAAEAAAAGABUAAAAGAAEAAAAHAA8AAAAGAAEAAAAHABAAAAAGAAEAAAAHABEAAAAGAAEAAAAHABIAAAAGAAEAAAAHABMAAAAGAAEAAAAHABQAAAAGAAEAAAAHABUAAAAGAAEAAAAIAA8AAAAGAAEAAAAIABAAAAAGAAEAAAAIABEAAAAGAAEAAAAIABIAAAAGAAEAAAAIABMAAAAGAAEAAAAIABQAAAAGAAEAAAAIABUAAAAGAAEAAAAJAA8AAAAGAAEAAAAJABAAAAAGAAEAAAAJABEAAAAGAAEAAAAJABIAAAAGAAEAAAAJABMAAAAGAAEAAAAJABQAAAAGAAEAAAAJABUAAAAGAAEAAAAKAA8AAAAGAAEAAAAKABAAAAAGAAEAAAAKABEAAAAGAAEAAAAKABIAAAAGAAEAAAAKABMAAAAGAAEAAAAKABQAAAAGAAEAAAAKABUAAAAGAAEAAAALAA8AAAAGAAEAAAALABAAAAAGAAEAAAALABEAAAAGAAEAAAALABIAAAAGAAEAAAALABMAAAAGAAEAAAALABQAAAAGAAEAAAALABUAAAAGAAEAAAAMAA8AAAAGAAEAAAAMABAAAAAGAAEAAAAMABEAAAAGAAEAAAAMABIAAAAGAAEAAAAMABMAAAAGAAEAAAAMABQAAAAGAAEAAAAMABUAAAAGAAEAAAANAA8AAAAGAAEAAAANABAAAAAGAAEAAAANABEAAAAGAAEAAAANABIAAAAGAAEAAAANABMAAAAGAAEAAAANABQAAAAGAAEAAAANABUAAAAGAAEAAAAOAA8AAAAGAAEAAAAOABAAAAAGAAEAAAAOABEAAAAGAAEAAAAOABIAAAAGAAEAAAAOABMAAAAGAAEAAAAOABQAAAAGAAEAAAAOABUAAAAGAAEAAAAAABYAAAAGAAEAAAABABYAAAAGAAEAAAACABYAAAAGAAEAAAADABYAAAAGAAEAAAAEABYAAAAGAAEAAAAFABYAAAAGAAEAAAAGABYAAAAGAAEAAAAHABYAAAAGAAEAAAAIABYAAAAGAAEAAAAJABYAAAAGAAEAAAAKABYAAAAGAAEAAAALABYAAAAGAAEAAAAMABYAAAAGAAEAAAANABYAAAAGAAEAAAAOABYAAAAGAAEAAAA=")
tile_set = SubResource("TileSet_nt2wp")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
z_index = 1
texture_filter = 1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAAAAAGAAEAAAAAAAEAAAAGAAEAAAAAAAIAAAAGAAEAAAAAAAMAAAAGAAEAAAAAAAQAAAAGAAEAAAAAAAUAAAAGAAEAAAAAAAYAAAAGAAEAAAAAAAcAAAAGAAEAAAAAAAgAAAAGAAEAAAABAAAAAAAGAAEAAAABAAEAAAAGAAEAAAABAAIAAAAGAAEAAAABAAMAAAAGAAEAAAABAAQAAAAGAAEAAAABAAUAAAAHAAAAAAABAAYAAAAGAAEAAAABAAcAAAAGAAEAAAABAAgAAAAAAAAAAAACAAAAAAAGAAEAAAACAAEAAAAAAAAAAAACAAIAAAAGAAEAAAACAAMAAAAHAAAAAAACAAQAAAAGAAAAAAACAAUAAAAGAAAAAAACAAYAAAAGAAEAAAACAAcAAAAGAAEAAAACAAgAAAAGAAEAAAADAAAAAAAGAAEAAAADAAEAAAAGAAEAAAADAAIAAAAGAAEAAAADAAMAAAAHAAAAAAADAAQAAAAGAAAAAAADAAUAAAAGAAAAAAADAAYAAAAGAAEAAAADAAcAAAAGAAEAAAADAAgAAAAGAAEAAAAEAAAAAAAGAAEAAAAEAAEAAAAGAAEAAAAEAAMAAAAHAAAAAAAEAAQAAAAHAAAAAAAEAAUAAAAHAAAAAAAEAAYAAAAGAAEAAAAEAAcAAAAGAAEAAAAEAAgAAAAGAAEAAAAFAAAAAAAGAAEAAAAFAAEAAAAGAAEAAAAFAAIAAAAGAAEAAAAFAAMAAAAHAAAAAAAFAAQAAAAGAAEAAAAFAAUAAAAGAAEAAAAFAAYAAAAGAAEAAAAFAAcAAAAGAAEAAAAFAAgAAAAGAAEAAAAGAAAAAAAGAAEAAAAGAAEAAAAGAAEAAAAGAAIAAAAAAAAAAAAGAAMAAAAGAAEAAAAGAAQAAAAGAAEAAAAGAAUAAAAGAAEAAAAGAAYAAAAGAAEAAAAGAAcAAAAGAAEAAAAGAAgAAAAGAAEAAAAHAAAAAAAGAAEAAAAHAAEAAAAGAAEAAAAHAAIAAAAGAAEAAAAHAAMAAAAGAAEAAAAHAAQAAAAGAAEAAAAHAAUAAAAGAAEAAAAHAAYAAAAGAAEAAAAHAAcAAAAGAAEAAAAHAAgAAAAGAAEAAAAIAAAAAAAGAAEAAAAIAAEAAAAGAAEAAAAIAAIAAAAGAAEAAAAIAAMAAAAGAAEAAAAIAAQAAAAAAAAAAAAIAAUAAAAGAAEAAAAIAAYAAAAGAAEAAAAIAAcAAAAGAAEAAAAIAAgAAAAGAAEAAAAJAAAAAAAGAAEAAAAJAAEAAAAGAAEAAAAJAAIAAAAGAAEAAAAJAAMAAAAGAAEAAAAJAAQAAAAGAAEAAAAJAAUAAAAGAAEAAAAJAAYAAAAGAAEAAAAJAAcAAAAGAAEAAAAJAAgAAAAGAAEAAAAAAAkAAAAGAAEAAAABAAkAAAAGAAEAAAACAAkAAAAGAAEAAAADAAkAAAAGAAEAAAAEAAkAAAAGAAEAAAAFAAkAAAAGAAEAAAAGAAkAAAAGAAEAAAAHAAkAAAAGAAEAAAAIAAkAAAAAAAAAAAAJAAkAAAAGAAEAAAAAAAoAAAAGAAEAAAAAAAsAAAAGAAEAAAAAAAwAAAAGAAEAAAAAAA0AAAAGAAEAAAAAAA4AAAAGAAEAAAABAAoAAAAGAAEAAAABAAsAAAAGAAEAAAABAAwAAAAGAAEAAAABAA0AAAAHAAAAAAABAA4AAAAGAAEAAAACAAoAAAAGAAEAAAACAAsAAAAGAAEAAAACAAwAAAAAAAAAAAACAA0AAAAGAAEAAAACAA4AAAAGAAEAAAADAAoAAAAGAAEAAAADAAsAAAAGAAEAAAADAAwAAAAGAAEAAAADAA0AAAAGAAEAAAADAA4AAAAGAAEAAAAEAAoAAAAGAAEAAAAEAAsAAAAGAAEAAAAEAAwAAAAGAAEAAAAEAA0AAAAGAAEAAAAEAA4AAAAGAAEAAAAFAAoAAAAAAAAAAAAFAAsAAAAGAAEAAAAFAAwAAAAGAAEAAAAFAA0AAAAGAAEAAAAFAA4AAAAGAAEAAAAGAAoAAAAGAAAAAAAGAAsAAAAHAAAAAAAGAAwAAAAHAAAAAAAGAA0AAAAGAAAAAAAGAA4AAAAGAAEAAAAHAAoAAAAGAAAAAAAHAAsAAAAHAAAAAAAHAAwAAAAHAAAAAAAHAA0AAAAGAAAAAAAHAA4AAAAGAAEAAAAIAAoAAAAGAAAAAAAIAAsAAAAHAAAAAAAIAAwAAAAHAAAAAAAIAA0AAAAGAAAAAAAIAA4AAAAGAAEAAAAJAAoAAAAGAAEAAAAJAAsAAAAGAAEAAAAJAAwAAAAGAAEAAAAJAA0AAAAGAAEAAAAJAA4AAAAAAAAAAAAHABMAAAAAAAAAAAAOABIAAAAAAAAAAAACABIAAAAAAAAAAAANAAQAAAAAAAAAAAAOABUAAAAAAAAAAAANABUAAAAAAAAAAAAOABQAAAAAAAAAAAANAAMAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAABABUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_nt2wp")

[node name="player" parent="." instance=ExtResource("2_0ukcc")]
z_index = 3
position = Vector2(241, 387)
scale = Vector2(3, 3)

[node name="spawn_enemy" type="Node2D" parent="." node_paths=PackedStringArray("spawn_timer", "enemy_container", "coin_spawner")]
script = ExtResource("4_qh04p")
enemy_scene = ExtResource("3_nt2wp")
spawn_area = Vector2(480, 736)
spawn_timer = NodePath("spawn_timer")
enemy_container = NodePath("enemy_container")
coin_spawner = NodePath("../spawn_coin")

[node name="spawn_timer" type="Timer" parent="spawn_enemy"]
autostart = true

[node name="enemy_container" type="Node2D" parent="spawn_enemy"]
z_index = 2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="spawn_enemy" groups=["player"]]
visible = false
position = Vector2(243, 368)
scale = Vector2(30, 42.8)

[node name="spawn_coin" type="Node2D" parent="." node_paths=PackedStringArray("spawn_enemy", "spawn_timer", "coin_container")]
script = ExtResource("5_k8f8b")
spawn_enemy = NodePath("../spawn_enemy")
spawn_timer = NodePath("../spawn_enemy/spawn_timer")
spawn_area = Vector2(480, 736)
coin_scene = ExtResource("6_7vc00")
coin_container = NodePath("coin_container")

[node name="coin_container" type="Node2D" parent="spawn_coin"]
z_index = 1

[node name="menu" type="Node2D" parent="." node_paths=PackedStringArray("pause_menu")]
process_mode = 3
script = ExtResource("10_tdkxd")
pause_menu = NodePath("pause_menu")

[node name="pause_menu" type="CanvasLayer" parent="menu"]
visible = false

[node name="ColorRect" type="ColorRect" parent="menu/pause_menu"]
offset_right = 494.0
offset_bottom = 744.0
color = Color(0, 0, 0, 0.486275)

[node name="Label" type="Label" parent="menu/pause_menu"]
offset_left = 71.0
offset_top = 334.0
offset_right = 424.0
offset_bottom = 416.0
text = "PAUSED"
label_settings = SubResource("LabelSettings_epufq")

[node name="collission" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collission"]
position = Vector2(-49.5, 363.5)
shape = SubResource("RectangleShape2D_ya4ey")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collission"]
position = Vector2(529, 363.5)
shape = SubResource("RectangleShape2D_ya4ey")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="collission"]
position = Vector2(244.75, 757)
shape = SubResource("RectangleShape2D_eb6dy")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="collission"]
position = Vector2(244.75, -23)
shape = SubResource("RectangleShape2D_eb6dy")

[connection signal="timeout" from="spawn_enemy/spawn_timer" to="spawn_enemy" method="_on_spawn_timer_timeout"]
